--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,5 @@
 <div class="container" [ngClass.gt-xs]="'container-gt-xs'">
   <app-get-posts></app-get-posts>
   <app-list-posts></app-list-posts>
+  <app-create-posts></app-create-posts>
 </div>
