feat: add input code field to expansion panel

--- a/src/app/create-posts/create-posts.component.html
+++ b/src/app/create-posts/create-posts.component.html
@@ -1,4 +1,5 @@
 <app-expansion-panel
   [title]="'Creating a resource'"
-  [data]="post"
+  [output]="post"
+  [input]="input"
 ></app-expansion-panel>
