--- a/src/app/list-posts/list-posts.component.html
+++ b/src/app/list-posts/list-posts.component.html
@@ -1,4 +1,5 @@
 <app-expansion-panel
   [title]="'Listing all resources'"
-  [data]="posts"
+  [output]="posts"
+  [input]="input"
 ></app-expansion-panel>
