--- a/src/app/get-posts/get-posts.component.html
+++ b/src/app/get-posts/get-posts.component.html
@@ -1,4 +1,5 @@
 <app-expansion-panel
   [title]="'Getting a resource'"
-  [data]="post"
+  [output]="post"
+  [input]="input"
 ></app-expansion-panel>
